--- a/app/src/main/res/layout/activity_main_container.xml
+++ b/app/src/main/res/layout/activity_main_container.xml
@@ -23,9 +23,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <FrameLayout
+        <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
             android:id="@+id/main_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
