--- a/app/src/main/res/xml/bottom_bar_tabs.xml
+++ b/app/src/main/res/xml/bottom_bar_tabs.xml
@@ -3,7 +3,7 @@
 <tabs>
     <tab
         id="@+id/tab_homescreen"
-        icon="@drawable/ic_group_black_24dp"
+        icon="@drawable/ic_home_black_24dp"
         title="Home" />
 
     <tab
@@ -13,6 +13,11 @@
 
     <tab
         id="@+id/tab_schedules"
-        icon="@drawable/ic_group_black_24dp"
+        icon="@drawable/ic_class_black_24dp"
         title="Schedules" />
+
+    <tab
+        id="@+id/tab_student"
+        icon="@drawable/ic_account_circle_black_24dp"
+        title="Id"/>
 </tabs>
