--- a/app/src/main/res/layout/item_teacher_view.xml
+++ b/app/src/main/res/layout/item_teacher_view.xml
@@ -16,6 +16,7 @@
             android:id="@+id/item_teacher_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="16sp"/>
 
         <TextView
@@ -23,7 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_teacher_name"
-            android:textSize="16sp"/>
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="14sp"/>
 
     </RelativeLayout>
 
