--- a/app/src/main/res/layout/controller_student.xml
+++ b/app/src/main/res/layout/controller_student.xml
@@ -4,9 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <SurfaceView
+        android:id="@+id/surface_student_view"
+        android:layout_width="640px"
+        android:layout_height="480px"
+        android:layout_centerInParent="true"/>
+
     <TextView
-        android:text="Hello Student"
+        android:id="@+id/text_student_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/surface_student_view"/>
 
 </RelativeLayout>
