--- a/app/src/main/res/menu/menu_teacher_overflow.xml
+++ b/app/src/main/res/menu/menu_teacher_overflow.xml
@@ -7,4 +7,8 @@
     <item
         android:id="@+id/teacher_overflow_phone"
         android:title="Call"/>
+
+    <item
+        android:id="@+id/teacher_overflow_website"
+        android:title="Website"/>
 </menu>
