Schedules can now be viewed in a detail activity which shows the time lengths for each period

--- a/app/src/main/res/menu/menu_teacher_overflow.xml
+++ b/app/src/main/res/menu/menu_teacher_overflow.xml
@@ -8,7 +8,7 @@
         android:id="@+id/teacher_overflow_phone"
         android:title="Call"/>
 
-    <item
+    <!--<item
         android:id="@+id/teacher_overflow_website"
-        android:title="Website"/>
+        android:title="Website"/> -->
 </menu>
