--- a/app/src/main/res/layout/activity_main_container.xml
+++ b/app/src/main/res/layout/activity_main_container.xml
@@ -26,18 +26,22 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
+        <FrameLayout
             android:id="@+id/main_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
 
-        <com.roughike.bottombar.BottomBar
-            android:id="@+id/main_container_bottom_bar"
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:bb_tabXmlResource="@xml/bottom_bar_tabs"/>
+            android:elevation="3dp"
+            app:itemBackground="@android:color/white"
+            app:itemIconTint="@drawable/bottom_bar_color_state"
+            app:itemTextColor="@drawable/bottom_bar_color_state"
+            app:menu="@menu/bottom_navigation_menu"/>
 
     </RelativeLayout>
 
