Instead of using a popup menu, when teaachers are clicked they now show a bottom sheet with call and email options

--- a/app/src/main/res/layout/activity_main_container.xml
+++ b/app/src/main/res/layout/activity_main_container.xml
@@ -37,7 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:elevation="3dp"
+            android:elevation="8dp"
+            android:background="@android:color/white"
             app:itemBackground="@android:color/white"
             app:itemIconTint="@drawable/bottom_bar_color_state"
             app:itemTextColor="@drawable/bottom_bar_color_state"
