--- a/app/src/main/res/layout/bottom_sheet_teacher.xml
+++ b/app/src/main/res/layout/bottom_sheet_teacher.xml
@@ -57,4 +57,28 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/bottom_sheet_teacher_website"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:padding="16dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_open_in_browser_grey_500_24dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:text="Website"/>
+
+    </LinearLayout>
+
 </LinearLayout>
